fix contact form on small screen

--- a/styles.css
+++ b/styles.css
@@ -288,7 +288,7 @@ input[type=reset]:hover {
 
 
 .form-group {
-    margin-bottom: 1.5rem;
+    margin-bottom: 1em;
     position: relative;
 }
 
@@ -863,8 +863,15 @@ input[type=reset]:hover {
 
     #content #contact input[type="text"] {
         font-size: 1rem;
-        padding: 0.5em;
+        padding: 1.2em 0.5em;
+        padding-bottom: 0.5em;
     }
+
+    .form-group {
+        margin-bottom: 0.5em;
+        position: relative;
+    }
+
 
     #language {
         font-size: 1rem;
